--- a/partials/home.html
+++ b/partials/home.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row margin-bottom-me">
       <label>Search by catagory:</label>
-      <select>
+      <select ng-model='search.categories'>
         <option value=""></option>
         <option value="dark">Dark</option>
         <option value="col">Cold</option>
@@ -16,7 +16,7 @@
         <option value="spring">Spring</option>
       </select>
       <label>Search by name:</label>
-      <input type="text">
+      <input type="text" ng-model='search.name'>
       <input type="button" value="Checkout | Bag: Empty!" class="btn btn-danger pull-right">
     </div>
   </div>
@@ -40,7 +40,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr ng-repeat='tea in teas'>
+          <tr ng-repeat='tea in teas | filter:search'>
             <td><img ng-src="{{tea.imageUrl}}" alt='tea.name'/></td>
             <td>
                 <h3 style="display: inline-block">{{tea.name}}</h3>
