price filter needs work

--- a/partials/home.html
+++ b/partials/home.html
@@ -60,7 +60,7 @@
                   </select>
                   <input type="button" value="Add To Bag" class='btn btn-warning'>
                 </div>
-                <p><b>Price:</b> {{tea.price | currency:"$":0}}</p>
+                <p><b>Price:</b> {{tea.price}}</p>
                 <p><b>Caffeine Scale:</b> {{tea.caffeineScale}}</p>
                 <p><b>Ingredients:</b> {{tea.ingredients}}</p>
                 <p><b>Rating:</b> {{tea.rating}}</p>
