--- a/partials/home.html
+++ b/partials/home.html
@@ -17,7 +17,8 @@
       </select>
       <label>Search by name:</label>
       <input type="text" ng-model='search.name'>
-      <input type="button" value="Checkout | Bag: Empty!" class="btn btn-danger pull-right">
+      <!-- <a href="/checkout"><input type="button" value="Checkout | Bag: Empty!" class="btn btn-danger pull-right" ng-show='bag.length=0'></a> -->
+      <a href="/#/checkout"><input type="button" value="Checkout | Bag: ({{bag.length}})" class="btn btn-danger pull-right" ng-hide='bag.length > 0' ></a>
     </div>
   </div>
   <div class="container">
@@ -45,20 +46,21 @@
             <td>
                 <h3 style="display: inline-block">{{tea.name}}</h3>
                 <div class="pull-right">
-                  <h3 style="display: inline-block">Quantity:</h3>
-                  <select>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                    <option value="10">10</option>
-                  </select>
-                  <input type="button" value="Add To Bag" class='btn btn-warning'>
+                  <form ng-submit='addToBad(addedAmount, tea._id)'>
+                    <h3 style="display: inline-block">Quantity:</h3>
+                    <select ng-model='addedAmount'>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                      <option value="6">6</option>
+                      <option value="7">7</option>
+                      <option value="8">8</option>
+                      <option value="9">9</option>
+                      <option value="10">10</option>
+                    </select>
+                    <input type="submit" value="Add To Bag" class='btn btn-warning'>
+                  </form>
                 </div>
                 <p><b>Price:</b> {{tea.price}}</p>
                 <p><b>Caffeine Scale:</b> {{tea.caffeineScale}}</p>
