--- a/partials/checkout.html
+++ b/partials/checkout.html
@@ -1,1 +1,64 @@
-<h1>hey hey hye</h1>
+<div ng-controller='CheckoutController'>
+ <div class="container">
+   <div class="row">
+     <h3 style="display: inline-block">My Shopping Bag</h3>
+     <h3 class="pull-right">Order Total: 'total goes here'</h3>
+   </div>
+ </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>Product</th>
+          <th>Quantity</th>
+          <th>Sub-total</th>
+          <div class="pull-right">
+            <label>Sort By Price:</label>
+            <select>
+              <option value=""></option>
+              <option value="high">Highest</option>
+              <option value="low">Lowest</option>
+            </select>
+          </div>
+        </tr>
+      </thead>
+      <tbody>
+        <tr ng-repeat='tea in teas | filter:search'>
+          <td><img ng-src="{{tea.imageUrl}}" alt='tea.name'/></td>
+          <td>
+              <h3 style="display: inline-block">{{tea.name}}</h3>
+              <div class="pull-right">
+                <form ng-submit='addToBad(addedAmount, tea._id)'>
+                  <h3 style="display: inline-block">Quantity:</h3>
+                  <select ng-model='addedAmount'>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                  </select>
+                  <input type="submit" value="Add To Bag" class='btn btn-warning'>
+                </form>
+              </div>
+              <p><b>Price:</b> {{tea.price}}</p>
+              <p><b>Caffeine Scale:</b> {{tea.caffeineScale}}</p>
+              <p><b>Ingredients:</b> {{tea.ingredients}}</p>
+              <p><b>Rating:</b> {{tea.rating}}</p>
+              <p><b>In Stock?</b> {{tea.inStock | testBool}}</p>
+              <p><b>Categories</b></p>
+              <ul ng-repeat='category in tea.categories'>
+                <li>{{category}}</li>
+              </ul>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
