--- a/partials/home.html
+++ b/partials/home.html
@@ -17,8 +17,8 @@
       </select>
       <label>Search by name:</label>
       <input type="text" ng-model='search.name'>
-      <!-- <a href="/checkout"><input type="button" value="Checkout | Bag: Empty!" class="btn btn-danger pull-right" ng-show='bag.length=0'></a> -->
-      <a href="/#/checkout"><input type="button" value="Checkout | Bag: ({{bag.length}})" class="btn btn-danger pull-right" ng-hide='bag.length > 0' ></a>
+      <a href="/checkout"><input type="button" value="Checkout | Bag: Empty!" class="btn btn-danger pull-right" ng-show='bag.length<=0'></a>
+      <a href="/#/checkout"><input type="button" value="Checkout | Bag: ({{bag.length}})" class="btn btn-danger pull-right" ng-show='bag.length > 0' ></a>
     </div>
   </div>
   <div class="container">
@@ -46,7 +46,7 @@
             <td>
                 <h3 style="display: inline-block">{{tea.name}}</h3>
                 <div class="pull-right">
-                  <form ng-submit='addToBad(addedAmount, tea._id)'>
+                  <form ng-submit='addToBag(addedAmount, tea)'>
                     <h3 style="display: inline-block">Quantity:</h3>
                     <select ng-model='addedAmount'>
                       <option value="2">2</option>
