--- a/partials/checkout.html
+++ b/partials/checkout.html
@@ -2,7 +2,7 @@
  <div class="container">
    <div class="row">
      <h3 style="display: inline-block">My Shopping Bag</h3>
-     <h3 class="pull-right">Order Total: 'total goes here'</h3>
+     <h3 class="pull-right">Order Total: {{orderTotal | currency}}</h3>
    </div>
  </div>
 </div>
@@ -19,23 +19,24 @@
         </tr>
       </thead>
       <tbody>
-        <!-- <tr ng-repeat='tea in teas | filter:search'> -->
-        <tr>
-          <td>
-            <p>Tea Name</p>
+        <tr ng-repeat='tea in checkOutTeas | filter:search'>
+          <td id='first-counter'>
+            <h3>{{tea.name}}</h3>
             <img ng-src="{{tea.imageUrl}}" alt='tea.name'/>
-            <p><b>Caffeine Scale:</b></p>
-            <p><b>Ingredients:</b></p>
-            <p><b>Rating:</b></p>
+            <p><b>Caffeine Scale:</b> {{tea.caffeineScale}}</p>
+            <p><b>Ingredients:</b> {{tea.ingredients}}</p>
+            <p><b>Rating:</b> {{tea.rating}}</p>
           </td>
           <td>
-            <p>number</p>
+            <p ng-hide='edit'>{{tea.count}}</p>
+            <input ng-show='edit' type="number" ng-model='newQuantity'>
           </td>
           <td>
-            <p>quantity times cost</p>
+            <p>{{tea.price * tea.count | currency}}</p>
           </td>
           <td>
-            <input type="button" value="Edit" class="btn btn-warning">
+            <input ng-hide='edit' type="button" value="Edit" class="btn btn-warning" ng-click='editSwitch()'>
+            <input ng-show='edit' type="button" value="Save" class="btn btn-warning" ng-click='updateQuantity(newQuantity, tea._id)'>
             <input type="button" value="Delete" class="btn btn-danger">
           </td>
         </tr>
